<resources>
    <string name="app_name">工大自习室</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">时间</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="class1">7:00</string>
    <string name="class2">10:30</string>
    <string name="class3">12:10</string>
    <string name="class4">14:00</string>
    <string name="class5">16:00</string>
    <string name="class6">19:00</string>

    <string name="mon_1">高数</string>
    <string name="tu_1"></string>
    <string name="wed_1"></string>
    <string name="th_1">线代</string>
    <string name="fr_1"></string>
    <string name="sat_1"></string>
    <string name="sun_1">自控实验第一学期</string>
</resources>
